# ibuyreal-crm-

./: .dockerignore  .env.local.example  DEPLOY.md  Dockerfile  README.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  pyproject.toml
drizzle/migrations/: 0000_quiet_kree.sql  0001_harsh_omega_flight.sql  0002_strange_doctor_doom.sql  0003_case_id_canonical_listing.sql  0003_conscious_apocalypse.sql  0004_brave_felicia_hardy.sql  0004_remove_median_price_and_null_fallback_source.sql  0005_drop_on_market_scenario_columns.sql  0005_friendly_venom.sql  0006_abnormal_sage.sql  0006_rename_on_market_predicted_at.sql  0007_chilly_hulk.sql  0008_lethal_goblin_queen.sql  0009_salty_brood.sql  0010_solid_mach_iv.sql  0011_wonderful_apocalypse.sql  0012_chilly_captain_universe.sql  0013_blushing_vision.sql  0014_sun_score.sql
drizzle/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json  (+6 more)
scripts/: pull-env.mjs
sql/: 001_crm_bootstrap.sql  002_crm_verify.sql
sql/crm/: on_market_candidates.sql
src/: instrumentation.ts
src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
src/components/: DiagnoseChips.tsx
src/lib/: assumptions.ts  avm.ts  avmCalibration.ts  bydelBenchmarks.ts  calculator.test.ts  calculator.ts  constants.ts  curation.ts  diagnose.ts  excel.ts  format.ts  imageAssessment.ts  on-market.ts  postnrClusters.ts  postnumre.ts  quality.ts  scrape.ts  status.ts  strongComps.ts  sun.ts  types.ts
(+54 files in other folders)
